--- a/Comparisons/DietDocker/Dockerfile
+++ b/Comparisons/DietDocker/Dockerfile
@@ -4,10 +4,10 @@ FROM microsoft/dotnet:2.1-sdk-alpine AS installer-env
 ARG HOST_COMMIT
 ARG BUILD_NUMBER
 
-RUN apk add bash protobuf
+RUN apk add --no-cache bash protobuf python3
 ENV PublishWithAspNetCoreTargetManifest false
 
-RUN wget https://github.com/priyaananthasankar/azure-functions-host/dev.tar.gz && \
-    tar xzf dev.tar.gz && \
+RUN wget https://github.com/priyaananthasankar/parseltongue/tree/master/Comparisons/DietDocker/azure-functions-host-dev.tar && \
+    tar xzf azure-functions-host-dev && \
     cd azure-functions-host-* && \
     dotnet publish -v q /p:BuildNumber="00001" /p:CommitHash=dev src/WebJobs.Script.WebHost/WebJobs.Script.WebHost.csproj --output /azure-functions-host
